<resources>
    <string name="app_name">capstone</string>
    <string name="Notification">Notification</string>
    <string name="Appointments_label">Appointments</string>
    <string name="Manage_schedule">Manage Schedules</string>

    ///
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="blood">
        <item>I don\'t know</item>
        <item>A positive (A+)</item>
        <item>A negative (A-)</item>
        <item>B positive (B+)</item>
        <item>B negative (B-)</item>
        <item>O positive (O+)</item>
        <item>O negative (O-)</item>
        <item>AB positive (AB+)</item>
        <item>AB negative (AB-)</item>
    </string-array>

    <string name="number_of_notif">5</string>
    <string name="notif_label">Number of Notification</string>
    <string name="today_notif_label">Today: </string>
    <string name="thisweek_notif_label">This week: </string>
    <string name="today_number">10</string>
    <string name="thisweek_number">20</string>
    <string name="Date">Date</string>
    <string name="time">time</string>
    <string name="Upcoming">Upcoming Appointment:</string>
    <string name="areyousure">Are you sure about the schedule?</string>
    <string name="norefund">There will be no refund once confirmed.</string>
    <string name="confirm">Confirm</string>
    <string name="chat">Chat</string>
    <string name="patient_record">Patient record</string>
    <string name="doctor_name">Doctors name</string>
    <string name="scheduled_date">date_scheduled</string>
    <string name="Status_label">STATUS</string>
    <string name="status">status</string>
    <string name="patient_name">Patients name</string>
    <string name="Clinicdialog">Clinic:</string>
    <string name="Hmodialog">Health Insurance:</string>
    <string name="Doctordialog">Doctor:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="password_hint">• • • • • •</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Open navigation drawer</string>
    <string name="cardNum">Enter card number</string>


    <string name="Doc_name">Doctor</string>
    <string name="Email">Email</string>
    <string name="past_record">Past Record</string>
    <string name="date_appointment">Date</string>
    <string name="time_appointment">Time</string>
    <string name="reschedule">Reschedule</string>
    <string name="record">Record</string>
    <string name="note">Note:</string>
    <string name="date">Date</string>
    <string name="sign_out">sign_out</string>
    <string name="incoming_meeting_invitation">incoming meeting invitation</string>
    <string name="sending_meeting_invitation">sending meeting invitation</string>

    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>
    <dimen name="local_preview_margin_top">28dp</dimen>
    <dimen name="local_preview_margin_right">24dp</dimen>

    <dimen name="call_button_size">60dp</dimen>
    <dimen name="other_button_size">54dp</dimen>
    <dimen name="local_preview_width">88dp</dimen>
    <dimen name="local_preview_height">117dp</dimen>
    <dimen name="local_back_icon_size">50dp</dimen>
    <dimen name="remote_back_icon_size">100dp</dimen>
    <dimen name="remote_back_icon_margin_bottom">90dp</dimen>

    <dimen name="control_bottom_margin">24dp</dimen>
    <dimen name="control_bottom_horizontal_margin">30dp</dimen>


    <string name="changepass">Are you sure you want to change your password</string>
    <string name="changepass1">Please check your email to set your new password</string>

    <string name="edittxtid">edittxt</string>
    <string name="pricelist">Select a Price</string>


    <!-- PLEASE KEEP THIS App ID IN SAFE PLACE -->
    <!-- Get your own App ID at https://dashboard.agora.io/ -->
    <!-- After you entered the App ID, remove <##> outside of Your App ID -->
    <string name="agora_app_id">55a298bc04114343b6eda0f58458de2e</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="agora_access_token"></string>

    <string-array name="Status">
        <item>All</item>
        <item>Approved</item>
        <item>Booked</item>
        <item>Pending</item>
        <item>Cancelled</item>
        <item>Declined</item>
        <item>Rescheduled</item>
        <item>Unattended</item>


    </string-array>
    <string-array name="StatusPat">
        <item>All</item>
        <item>Approved</item>
        <item>Cancelled</item>
        <item>Completed</item>
        <item>Declined</item>
        <item>Rescheduled</item>
        <item>Unattended</item>


    </string-array>

    <string-array name="Price">
        <item>₱150</item>
        <item>₱200</item>
        <item>₱250</item>
        <item>₱300</item>


    </string-array>


    <!-- BOLD-->
    <string name="bold"><b><i>FirstName</i></b></string>

    <string name="termsandcondition"><a href="https://www.termsfeed.com/live/83c45c03-d205-4bac-a32b-95b0434678e0">Privacy Policy</a></string>
    <string name="instructions"><a href="https://medicall-6effc.web.app/Instructions.html">Instructions</a></string>
</resources>