<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbg"
    tools:context=".Login">

    <include layout="@layout/barlayout"
        android:id="@+id/toolbarlogin"/>


    <RelativeLayout
        android:id="@+id/login_progress_remove"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_190sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/roundtbox"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_230sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/roundtbox"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/logbtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_270sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:background="@drawable/darkround"
            android:text="@string/btn_login"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_155sdp"
            android:layout_marginLeft="@dimen/_155sdp"
            android:layout_marginTop="@dimen/_270sdp"
            android:background="@drawable/darkround"
            android:text="Sign up"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_315sdp"
            android:text="Forgot Password"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginLeft="@dimen/_100sdp"
            android:onClick="forgotPassword"
            android:clickable="true" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_125sdp"
            android:layout_marginLeft="@dimen/_135sdp"
            android:layout_marginTop="@dimen/_330sdp"
            android:clickable="true"
            android:gravity="center"
            android:text="Terms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="If you want to register your clinic please contact us." />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="Email: Medi-call@gmail.com" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:layout_centerInParent="true"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>


</RelativeLayout>